--- a/pyproject.toml
+++ b/pyproject.toml
@@ -17,6 +17,7 @@ dj-database-url = "^1.2.0"
 psycopg2-binary = "^2.9.5"
 drf-yasg = "^1.21.4"
 drf_base64 = "^2.0"
+django-cors-headers = "^3.14.0"
 
 
 
