--- a/pyproject.toml
+++ b/pyproject.toml
@@ -18,6 +18,7 @@ psycopg2-binary = "^2.9.5"
 drf-yasg = "^1.21.4"
 drf_base64 = "^2.0"
 django-cors-headers = "^3.14.0"
+whitenoise = "^6.4.0"
 
 
 
