--- a/requirements.txt
+++ b/requirements.txt
@@ -24,6 +24,7 @@ MarkupSafe==2.1.2
 mccabe==0.6.1
 packaging==23.0
 pluggy==1.0.0
+psycopg2==2.9.5
 psycopg2-binary==2.9.5
 pycodestyle==2.7.0
 pyflakes==2.3.1
