--- a/front/package.json
+++ b/front/package.json
@@ -62,7 +62,7 @@
     "simplebar-react": "^2.3.0"
   },
   "scripts": {
-    "start": "DISABLE_ESLINT_PLUGIN=true NODE_ENV=development react-scripts start",
+    "start": "react-scripts start",
     "prod": "NODE_ENV=production react-scripts start",
     "build": "react-scripts build",
     "build-local": "PUBLIC_URL=./ react-scripts build",
