--- a/requirements.txt
+++ b/requirements.txt
@@ -12,6 +12,7 @@ django-rest-auth==0.9.5
 djangorestframework==3.14.0
 drf-base64==2.0
 drf-yasg==1.21.4
+et-xmlfile==1.1.0
 exceptiongroup==1.1.0
 flake8==3.9.2
 gunicorn==20.1.0
@@ -22,6 +23,7 @@ itypes==1.2.0
 Jinja2==3.1.2
 MarkupSafe==2.1.2
 mccabe==0.6.1
+openpyxl==3.1.2
 packaging==23.0
 pluggy==1.0.0
 psycopg2==2.9.5
@@ -44,3 +46,4 @@ uritemplate==4.1.1
 urllib3==1.26.14
 uuid==1.30
 whitenoise==6.4.0
+xlwt==1.3.0
